--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Jinja2==3.1.6
 python-dotenv==1.1.1
 python-multipart==0.0.20
 PyYAML==6.0.2
+requests==2.32.5
 uvloop==0.21.0
 watchfiles==1.1.0
 websockets==15.0.1
