--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Jinja2==3.1.6
 python-dotenv==1.1.1
 python-multipart==0.0.20
 PyYAML==6.0.2
+redis==6.4.0
 requests==2.32.5
 uvloop==0.21.0
 watchfiles==1.1.0
